<resources>
    <string name="app_name">四川移动</string>
    <string name="oneself_handle_business">业务办理</string>
    <string name="search">搜索</string>
    <string name="business">业务</string>
    <string name="charge_value">充值</string>
    <string name="home">首页</string>
    <string name="traffic">流量</string>
    <string name="discount_phone">我的特权</string>
    <string name="more">更多</string>
    <string name="Return">返回</string>
    <string name="delete">删除</string>
    <string name="details">详情</string>
    <string name="introduce">说明</string>
    <string name="openUp">开通</string>
    <string name="shutDown">关闭</string>
    <string name="unsubscribe">退订</string>
    <string name="handle">办理</string>
    <string name="submit">提交</string>
    <string name="send_share">发送分享</string>
    <string name="businessState">业务状态</string>
    <string name="noCotent">无内容</string>
    <string name="inputText">输入文本...</string>
    <string name="inputMobileNumber">输入手机号...</string>
    <string name="hintInputMobileNumber">请输入手机号码</string>
    <string name="sendSmsPassword">发送短信密码</string>
    <string name="onListLoading">列表获取中……</string>
    <string name="onDealing">处理中……</string>
    <string name="dialog_default_title">警告</string>
    <string name="re_try">重试</string>
    <string name="failed">失败</string>
    <string name="error">错误</string>
    <string name="QueryAddressList">通讯录获取</string>
    <string name="tagWarmNotice">温馨提示：</string>
    <string name="warmNotice">温馨提示</string>
    <string name="refreshing">更新中……</string>
    <string name="user_balance_warp">用户\n余额</string>
    <string name="remainder_traffic_warp">剩余\n流量</string>
    <string name="current_score">当前\n积分</string>
    <string name="user_score">用户积分</string>
    <string name="consumption_integral_query">客户消费积分查询</string>
    <string name="calls_the_electronic_ticket">话费\n电子券</string>
    <string name="yuan">元</string>
    <string name="zhao">M</string>
    <string name="score">分</string>
    <string name="unknow">未申请积分</string>
    <string name="no_secret_key">密匙丢失，请重新登录。</string>
    <string name="secret_key_overdue">密匙过期，请重新登录。</string>
    <string name="json_error">"抱歉，服务器压力过大，稍后请重试……"</string>
    <string name="login">登录</string>
    <string name="tiyan">立即体验</string>
    <string name="hintNoticeClickSmsPassword">请点击“发送短信密码” --></string>
    <string name="savePassword">记住密码</string>
    <string name="autoLogin">自动登录</string>
    <string name="inputCorrectPhoneNumber">无效号码或非移动号,请输入正确的手机号码。</string>
    <string name="inputCorrectPhoneNumber_s">请输入11位手机号码。</string>
    <string name="hintInputServicePassword">请输入6位服务密码</string>
    <string name="hintNewServicePassword">输入新的6位服务密码</string>
    <string name="loginByServecePassword">服务密码登录</string>
    <string name="loginBySmsPassword">短信密码登录</string>
    <string name="logining">登录中……</string>
    <string name="requestSmsPassword">发送验证码请求至服务器……</string>
    <string name="loadingUserInfo">加载用户信息中……</string>
    <string name="unlogin_notice">您尚未登录，    请先登录后进行操作。</string>
    <string name="autoLoginFailed">自动登录失败，请手动登录……</string>
    <string name="changePassword">密码修改</string>
    <string name="oldPassword">旧密码：</string>
    <string name="newPassword">新密码：</string>
    <string name="repeatConfirm">再次确认：</string>
    <string name="hintRepeatNewPassword">再次输入新的服务密码</string>
    <string name="noticeSameCheckPassword">请确认两次输入新密码是否相同……</string>
    <string name="passwordChangeSuccess">密码修改成功……</string>
    <string name="passwordInputWrong">密码错误……</string>
    <string name="topUpServe">充值服务</string>
    <string name="topUpComplete">充值完成</string>
    <string name="topUpAmount">充值金额：</string>
    <string name="payAmount">支付金额：</string>
    <string name="clickPay">点击支付</string>
    <string name="topUpNotice">充值提示</string>
    <string name="payAcount">支付金额：</string>
    <string name="BelongToCity">归属地市：</string>
    <string name="topUpCertain">充值确认</string>
    <string name="phontNumber">手机号码：</string>
    <string name="payWay">支付方式</string>
    <string name="certainPay">确认支付</string>
    <string name="noticeInputPayAmount">请输入支付金额……</string>
    <string name="topupNotice10times">注：只能是10的倍数</string>
    <string name="topupNoticeRange">注：充值范围10~500</string>
    <string name="inputOrSelectPhoneNum2Topup">输入或选择要充值的号码</string>
    <string name="fastTopUp">快速充值</string>
    <string name="checkPhoneTopupEnable">服务器验证此号码充值可行性，请稍后</string>
    <string name="waitForRequestPay">支付请求中，请稍候……</string>
    <string name="tag_balace">您的账户余额为：</string>
    <string name="tag_pbalace">公共账户余额为：</string>
    <string name="please">请</string>
    <string name="tag_see_balace">后查看余额</string>
    <string name="click_query">点击查询：</string>
    <string name="topupHistory">充值记录</string>
    <string name="cost_in_this_month">本月已消费：</string>
    <string name="cost_public_account_this_month">公共账户消费：</string>
    <string name="mainChargeBusiness">主资费消费</string>
    <string name="orderedBusiness">已订业务</string>
    <string name="recommendBusiness">推荐业务</string>
    <string name="log_off">注销</string>
    <string name="trafficServe">流量服务</string>
    <string name="getTrafficInfoFailed">流量信息获取失败。。</string>
    <string name="application_recommendation">应用推荐</string>
    <string name="myBill">我的帐单</string>
    <string name="historyBill">历史帐单</string>
    <string name="tab_query_bill">帐单查询：</string>
    <string name="productionIntroduce">产品介绍</string>
    <string name="chargeStandard">资费标准</string>
    <string name="businessHandle">业务办理</string>
    <string name="businessDealFaild">"办理失败"</string>
    <string name="businessQueryFaild">"查询失败"</string>
    <string name="businessDealSuccess">"办理成功"</string>
    <string name="businessExitSuccess">"退订成功"</string>
    <string name="deduct_expenses_alert">扣费提醒</string>
    <string name="businessCharge">业务资费:</string>
    <string name="takeEffectTime">生效时间:</string>
    <string name="clickManage">点击开通办理</string>
    <string name="clickQuitBusiness">点击退订业务</string>
    <string name="productionInfo">产品信息</string>
    <string name="wholeFamilyHappy">合家欢状态查询中...</string>
    <string name="famlily_member_hint">输入其中一个您的成员号码</string>
    <string name="addNewMember">添加新成员</string>
    <string name="handleWholeFamilyHappy">办理合家欢</string>
    <string name="addNewMemberHint">输入新成员手机号码……</string>
    <string name="exitWholeFamilyHappy">退出合家欢</string>
    <string name="wFH_faildGetMember">获取合家欢成员列表失败!</string>
    <string name="wFH_faildOpenBusiness">开通合家欢失败!</string>
    <string name="isWholeFamilyHappyCaller">您是合家欢召集人.</string>
    <string name="notWholeFamilyHappyCaller">您已加入合家欢，但不是召集人。</string>
    <string name="notJoinWholeFamilyHappy">该号码尚未加入合家欢。</string>
    <string name="wholeFamilyUnknowStatus">查询失败，请稍后重试。</string>
    <string name="callTransfer">呼叫转移</string>
    <string name="businessAlter">业务更改:</string>
    <string name="inputNumberForCallTransferHint">请输入要设置的呼叫转移号码</string>
    <string name="selectCallTransferCondition">请选择呼叫转移的条件</string>
    <string name="commitAlter">提交更改</string>
    <string name="seeDetails">了解详情</string>
    <string name="TwoCityOneHome">两城一家</string>
    <string name="TwoCityOneHomeInProvince">省内两城一家</string>
    <string name="TwoCityOneHomeOutProvince">省外两城一家</string>
    <string name="roamArea">漫游地区</string>
    <string name="hasOpenedUp">已开通</string>
    <string name="notOpenedUp">未开通</string>
    <string name="selectArea">请选择地区</string>
    <string name="userfeedback">用户反馈</string>
    <string name="feedback_notice">请填写一件反馈内容点击“提交”</string>
    <string name="feedback_type">反馈类型</string>
    <string name="contack_way">联系方式</string>
    <string name="feedback_content_in_140w">反馈内容（140字以内）：</string>
    <string name="friendsShare">好友分享</string>
    <string name="shareBySms">通过短信分享</string>
    <string name="shareByScanTwoDimensionCode">通过二维码扫描分享</string>
    <string name="shareByOtherWay">通过其他方式分享</string>
    <string name="input_friend_mobile_number">输入好友的手机号码...</string>
    <string name="shareContent">向你推荐\n四川移动手机营业厅 http://sc.10086.cn/app/download.html\n充值享优惠，自助办业务、话费帐单随你查，你也一起来哦。</string>
    <string name="shareContentLogined">你的好友【%s】向你推荐\n四川移动手机营业厅 http://sc.10086.cn/app/download.html\n充值享优惠，自助办业务、话费帐单随你查，你也一起来哦。 </string>
    <string name="towDimensCodeHelp">&lt;b&gt;生成推荐二维码说明：&lt;/b&gt;&lt;br&gt;1.完成登录和输入对方手机号;&lt;br&gt;2.点击页面中央二维码图片。</string>
    <string name="hasCreateNew2DimensCodeImage">"新二维码图生成。"</string>
    <string name="failedToCreateNew2DimensCodeImage">"二维码图生成失败。"</string>
    <string name="schoolSaleWord">四川移动APP，足不出户轻松充值，流量续航，一站业务办理。</string>
    <string name="myBusiness">我的业务</string>
    <string name="noticeUserOpenedBusinessListTag">尊敬的客户，您已开通的业务如下表：</string>
    <string name="mScroreTitle">积分兑换</string>
    <string name="myMScroreTab">我的积分/M值：</string>
    <string name="exchangeGift">兑换礼品</string>
    <string name="exchangePhoneCharge">兑换话费</string>
    <string name="exchange">兑换</string>
    <string name="exchangeHandling">兑换处理中……</string>
    <string name="exchangePreparing">积分兑换准备中……</string>
    <string name="inputOtherValueCharge">可输入其它金额兑换</string>
    <string name="my_credits_or_M">我的积分/M值:</string>
    <string name="CVSNearby">附近便利商店</string>
    <string name="exchangeCharge">兑换话费</string>
    <string name="exchangeECoupon">兑换电子券</string>
    <string name="exchangeTraffic">兑换流量</string>
    <string name="needScore">兑换所需积分：%d</string>
    <string name="smsExchangeUnalbeTitle">无法兑换</string>
    <string name="smsExchangeUnalbeNotice">设备未插入sim卡，不能发送短信，无法办理短信积分兑换……</string>
    <string name="imsiNotFixLoginUserNotice">当前登录用户号码与设备sim卡号码不相同，因此不能短信兑换，敬请谅解……</string>
    <string name="noticeSMSExchange">(温馨提示：您当前的手机卡未检测出是否是登录账号，兑换将采用短信方式，作用于手机sim卡所在号码，并非登录账号的号码。)</string>
    <string name="trafficPackage">流量包</string>
    <string name="leisureTrafficPackage">闲时流量包</string>
    <string name="superpositionTrafficPackage">叠加流量包</string>
    <string name="baseTrafficPackage">基础流量包</string>
    <string name="trafficPackageShare">流量分享</string>
    <string name="cmTrafficPackageGiveAsGift">移动数据流量套餐赠送</string>
    <string name="titleMoblileTrafficGiveAsGift">移动数据流量套餐赠送</string>
    <string name="giveNumber">赠送号码:</string>
    <string name="givePackage">赠送套餐:</string>
    <string name="giveDuration">赠送时长:</string>
    <string name="businessIntroduce">业务介绍:</string>
    <string name="giveCertain">确认赠送</string>
    <string name="latest_version_name">最新版本</string>
    <string name="update_des">更新内容</string>
    <string name="update_now">立即更新</string>
    <string name="later_say">以后再说</string>
    <string name="support_version_name">能够使用的最低版本</string>
    <string name="find_version_apk">发现新版本</string>
    <string name="latest_apk_downloading">最新安装程序下载中</string>
    <string name="apk_download_fail">最新安装程序下载失败，请重试。</string>
    <string name="background_donwn_apk">后台下载</string>
    <string name="down_apk_progress">下载进度</string>
    <string name="down_apk_failed">下载失败，请重试</string>
    <string name="version_too_low">当前版本太低，请更新到最新版本</string>
    <string name="down_apk_failed_reStart">下载失败,重新启动app进行更新</string>
    <string name="exitApp">退出</string>
    <string name="hot_phone">热卖手机</string>
    <string name="sliding_menu_user_name">用户名：</string>
    <string name="sliding_menu_phone">手机号：</string>
    <string name="sliding_menu_brand">所属品牌：</string>
    <string name="sliding_menu_creditRating">客户星级：</string>
    <string name="tag_mobile_number">手机号码</string>
    <string name="tag_service_password">服务密码</string>
    <string name="version">版本：vversion for android</string>
    <string name="check_new_version">检查新版本</string>
    <string name="contact_number">24小时客户服务：10086</string>
    <string name="about">四川移动掌上营业厅客户端，竭尽全力，为您提供查询服务，流量查询，充值服务，业务办理，特惠手机，彩铃声订购等服务，尽情享受便捷服务，一触即发的体验感受。</string>
    <string name="china_mobile_url_lable">官方地址：http://www.sc.10086.com/</string>
    <string name="copyright">中国移动通信集团四川有限公司 版权所有</string>
    <string name="choosePlease">请选择……</string>
    <string name="forgetPassword">忘记密码？</string>
</resources>