<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fafafa"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="20dip" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/about_china_moblie_logo" />

    <TextView
        android:id="@+id/apk_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:layout_marginTop="10dip"
        android:text="@string/version"
        android:textSize="@dimen/text_size_2"
        android:textColor="@color/text_color_gray" />

    <Button
        android:id="@+id/check_version_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:background="@drawable/selector_bg_business_open"
        android:text="@string/check_new_version"
        android:textSize="@dimen/text_size_2"
        android:textColor="@color/text_color_blue"
         />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_2"
        android:layout_gravity="center_vertical"
        android:text="@string/about"/>
    
     <Button
        android:id="@+id/china_mobile_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dip"
        android:layout_marginLeft="18dip"
        android:layout_marginRight="18dip"
        android:background="@drawable/blue_shape_bg"
        android:text="@string/contact_number"
        android:textSize="@dimen/text_size_2"
        android:textColor="@color/white"
        android:paddingTop="4dip"
        android:paddingBottom="4dip"
         />
     
      <TextView
        android:id="@+id/china_mobile_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:layout_marginLeft="18dip"
        android:layout_marginRight="18dip"
        android:textColor="@color/text_color_dark_blue"
        android:textSize="@dimen/text_size_3"
        android:visibility="gone"
        android:layout_gravity="center_horizontal|center_vertical"
        android:text="@string/china_mobile_url_lable"/>
        <TextView
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1.0"
        android:gravity="center_horizontal|center_vertical"
        android:textColor="@color/text_color_gray"
        android:layout_gravity="center_vertical"
        android:textSize="@dimen/text_size_2"
        android:text="@string/copyright"/>

</LinearLayout>